tests/semantic/invalid/scope_errors/test_parameter_scope.src
fn add(int a, int b) -> int {
    int a = 10;
    return a + b;
}

fn main() -> int {
    return add(5, 3);
}